<resources>
    <string name="app_name">YFC</string>

    <!-- Label for overflow menu option that inserts fake data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All</string>

    <!-- Title for the activity to add a new member [CHAR LIMIT=20] -->
    <string name="form_activity_title_new_member">Add a New Member</string>

    <!-- Label for editor menu option to save new member and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current member [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for personal details category of individual in the editor [CHAR LIMIT=30] -->
    <string name="personal_details">Personal Details</string>

    <!-- Text hint for first name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_first_name">First Name</string>

    <!-- Text hint for last name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_last_name">Last Name</string>

    <!-- Label for overview category of individual name in the editor [CHAR LIMIT=30] -->
    <string name="individual_overview">Overview</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="individual_DOB">Date of Birth</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="individual_gender">Gender</string>

    <!-- Label for educational details category of individual in the editor [CHAR LIMIT=30] -->
    <string name="educational_details">Educational Details</string>

    !-- Label for overview category of individual matric in the editor [CHAR LIMIT=30] -->
    <string name="individual_matriculation">Matric No</string>

    <!-- Label for department information in the editor [CHAR LIMIT=30] -->
    <string name="individual_department">Department</string>

    <!-- Label for faculty information in the editor [CHAR LIMIT=30] -->
    <string name="individual_faculty">Faculty</string>

    <!-- Label for level information in the editor [CHAR LIMIT=30] -->
    <string name="individual_level">Level</string>

    <!-- Text hint for first name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_matric_no">Matric No</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_level">100</string>

    <!-- Units for weight of the pet (kilograms) [CHAR LIMIT=5] -->
    <string name="level_indicator">Level</string>

    <!-- Label for dropdown menu option if the individual is male [CHAR LIMIT=20] -->
    <string name="gender_male">Male</string>

    <!-- Label for dropdown menu option if the individual is female [CHAR LIMIT=20] -->
    <string name="gender_female">Female</string>

    <!-- Label for dropdown menu option if the member is in Faculty of Agriculture[CHAR LIMIT=20] -->
    <string name="faculty_agriculture">Agriculture</string>

    <!-- Label for dropdown menu option if the member is in Agricultural Economics & Extension
    Department[CHAR LIMIT=20] -->
    <string name="department_agricultural_economics_n_extension">Agricultural Economics &amp; Extension</string>

    <!-- Label for dropdown menu option if the member is in Animal Production Department[CHAR LIMIT=20] -->
    <string name="department_animal_production">Animal Production</string>

    <!-- Label for dropdown menu option if the member is in Animal Production Department[CHAR LIMIT=20] -->
    <string name="department_soil_n_environmental_management">Soil &amp; Environmental Management</string>

    <!-- Label for dropdown menu option if the member is in Crop Production Department[CHAR LIMIT=20] -->
    <string name="department_crop_production">Crop Production</string>

    <!-- Label for dropdown menu option if the member is in Fisheries & Aquaculture Department[CHAR LIMIT=20] -->
    <string name="department_fisheries_aquaculture">Fisheries &amp; Aquaculture</string>

    <!-- Label for dropdown menu option if the member is in Fisheries & Aquaculture Department[CHAR LIMIT=20] -->
    <string name="department_food_science_technology">Food Science &amp; Technology</string>

    <!-- Label for dropdown menu option if the member is in Fisheries & Aquaculture Department[CHAR LIMIT=20] -->
    <string name="department_home_sciences">Home Sciences</string>

    <!-- Label for dropdown menu option if the member is in Faculty of Arts & Humanities[CHAR LIMIT=20] -->
    <string name="faculty_arts_n_humanities">Arts &amp; Humanities</string>

    <!-- Label for dropdown menu option if the member is in Faculty of Education[CHAR LIMIT=20] -->
    <string name="faculty_education">Education</string>

    <!-- Label for dropdown menu option if the member is in Faculty of Health Science[CHAR LIMIT=20] -->
    <string name="faculty_health_science">Health Science</string>

    <!-- Label for dropdown menu option if the member is in Faculty of Law[CHAR LIMIT=20] -->
    <string name="faculty_law">Law</string>

    <!-- Label for dropdown menu option if the member is in Faculty of Management Science[CHAR LIMIT=20] -->
    <string name="faculty_management_science">Management Science</string>

    <!-- Label for dropdown menu option if the member is in Faculty of Natural Sciences[CHAR LIMIT=20] -->
    <string name="faculty_natural_sciences">Natural Sciences</string>

    <!-- Label for dropdown menu option if the member is in Faculty of Social Sciences[CHAR LIMIT=20] -->
    <string name="faculty_social_sciences">Social Sciences</string>

    <!-- Notification for editor menu option to save member when in CatalogActivity [CHAR LIMIT=20] -->
    <string name="notification_action_save">Member saved</string>

    <!-- Notification for editor menu option to save member when in CatalogActivity [CHAR LIMIT=20] -->
    <string name="notification_action_save_error">Error with saving Member</string>
</resources>
